--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,13 @@
 #? ???????????? ????? ??????? ???????? https://spring.io/guides/gs/accessing-data-mysql/
 spring.jpa.hibernate.ddl-auto=update
 #??????????? ? ????????? ??, ????? ???????? ???? ? ???????? ??
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.31.44}:3306/spring_test
+spring.datasource.url=jdbc:mariadb://192.168.31.44:3306/spring_test
 #????? ???????
-spring.datasource.username=springuser
+spring.datasource.username=e999or
 #?????? ???????
-spring.datasource.password=ThePassword
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.password=134teo
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.jpa.show-sql: true
