--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mariadb://192.168.31.44:3306/spring_test
 #????? ???????
 spring.datasource.username=e999or
 #?????? ???????
-spring.datasource.password=134teo
+spring.datasource.password=****
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
