--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,11 @@
 #server.port = 8080 ??? ???? ??????? ????? ?????????
 
 #? ???????????? ????? ??????? ???????? https://spring.io/guides/gs/accessing-data-mysql/
-spring.jpa.hibernate.ddl-auto=update
-#??????????? ? ????????? ??, ????? ???????? ???? ? ???????? ??
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:192.168.31.44}:3306/spring_test
-spring.datasource.url=jdbc:mariadb://192.168.31.44:3306/spring_test
-#????? ???????
-spring.datasource.username=e999or
-#?????? ???????
-spring.datasource.password=****
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=true
+#update? or none
+spring.datasource.url=jdbc:mariadb:
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.jpa.show-sql: true
+
