--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=true
 #update? or none
-spring.datasource.url=jdbc:mariadb:
-spring.datasource.username=root
+spring.datasource.url=jdbc:mariadb://192.168.31.44:3306/spring_test
+spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
